--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.13",
+    "@types/d3": "^7.4.3",
     "@types/eslint": "^8.56.0",
     "@types/node": "^20.14.14",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -32,9 +33,10 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-preprocess": "^6.0.2",
     "tailwindcss": "3.4.7",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.5.4",
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.3.3"
   },
@@ -43,6 +45,7 @@
     "@floating-ui/dom": "1.6.8",
     "@types/echarts": "^4.9.22",
     "axios": "^1.7.2",
+    "d3": "^7.9.0",
     "echarts": "^5.5.1",
     "highlight.js": "11.10.0",
     "unplugin-icons": "^0.12.8",
